k8s/services/manifests/couchdb/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: couchdb
  labels:
    shared-gateway-access: 'true'
