k8s/services/manifests/couchdb/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: couchdb
  namespace: couchdb
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - couchdb.furonverse.com
  rules:
    - backendRefs:
        - kind: Service
          name: couchdb-svc-couchdb
          port: 5984
